--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -19,11 +19,13 @@ bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
 -ActionMappings=(ActionName="ZoomIn",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="GetActor",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ZoomIn",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="GetActor",Key=X,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
--AxisMappings=(AxisName="MoveRight",Key=D,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 -AxisMappings=(AxisName="CameraPitch",Key=MouseY,Scale=1.000000)
 -AxisMappings=(AxisName="CameraYaw",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
