Fix error about game mode. You are going to set each gamemode in a World Setting each Level.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode="/Script/UE4Study.UE4StudyGameMode"
+EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
+GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
@@ -57,5 +57,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
